MIL-54 fix z-index bug for login form (thanks Dan Rye)

--- a/app/css/nav.scss
+++ b/app/css/nav.scss
@@ -21,7 +21,9 @@ header.show .container {
   // margin-top: 10px;
   }
 }
-
+.menu__container {
+  z-index: 100000;
+}
 #container.show {
   position: fixed;
   top: 10%;
